# npu_riscv

./: .gitignore  CMakeLists.txt
app/hello/: app.cmake  build.sh
app/hello/src/: main.c
hw/cpu/cv32e40p/: CMakeLists.txt  crt0.S  handlers.S  link.ld  syscalls.c
